--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2450,6 +2450,21 @@
 				border-top: 0;
 			}
 
+			@media only screen and (max-width: 450px) {
+		        .column:nth-child(4),
+		        .column:nth-child(6),
+		        .against,
+		        .top6
+		        {
+		            display: none;
+		        }
+		        tbody
+		        {
+		        	font-size: 14px;
+		        } 
+		    }
+
+
 /* Button */
 
 	input[type="submit"],
