--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2447,6 +2447,16 @@
 				border-top: 0;
 			}
 
+			.column:nth-child(2) {
+				font-weight: 900;
+				line-height: 1.5;
+				font-size: .8em;
+				margin: 0 0 2em 0;
+				text-transform: uppercase;
+				letter-spacing: 0.35em;
+			}
+
+
 			@media only screen and (max-width: 450px) {
 		        .column:nth-child(4),
 		        .column:nth-child(6),
