--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2456,7 +2456,7 @@
 				letter-spacing: 0.35em;
 			}
 
-
+/* Standings Table Edits - Mobile */
 			@media only screen and (max-width: 450px) {
 		        .column:nth-child(4),
 		        .column:nth-child(6),
@@ -2465,10 +2465,16 @@
 		        {
 		            display: none;
 		        }
+
 		        tbody
 		        {
 		        	font-size: 14px;
+		        }
+
+		        .team {
+		        	width: 36px;
 		        } 
+
 		    }
 
 
